--- a/ZProyecto Calculadora SET/index.html
+++ b/ZProyecto Calculadora SET/index.html
@@ -9,30 +9,34 @@
   </head>
   <body>
     <h1>Calculadora desde 0</h1>
-    <form>
+
+    <div class="cuadro">
       <input class="pantalla" type="number" placeholder="0" />
-      <button class='botones'>+/-</button>
-      <button class='botones'>0</button>
-      <button class='botones'>.</button>
-      <button class='botones'>=</button>
-      <button class='botones'>+</button>
-      <button class='botones'>3</button>
-      <button class='botones'>2</button>
-      <button class='botones'>1</button>
+
+      <button class='botones'>CE</button>
+      <button class='botones'>C</button>
+      <button class='botones'>%</button>
+      <button class='botones'>1/x</button>
+      <button class='botones'>⌫</button>
+      <button class='botones'>7</button>
+      <button class='botones'>8</button>
+      <button class='botones'>9</button>
+      <button class='botones'>^</button>
+      <button class='botones'>√</button>
       <button class='botones'>4</button>
       <button class='botones'>5</button>
       <button class='botones'>6</button>
-      <button class='botones'>-</button>
       <button class='botones'>x</button>
-      <button class='botones'>9</button>
-      <button class='botones'>8</button>
-      <button class='botones'>7</button>
       <button class='botones'>÷</button>
-      <button class='botones'>√</button>
-      <button class='botones'>^</button>
-      <button class='botones'>%</button>
-      <button class='botones'>⌫</button>
-      <button class='botones'>C</button>
-    </form>
+      <button class='botones'>1</button>
+      <button class='botones'>2</button>
+      <button class='botones'>3</button>
+      <button class='botones'>+</button>
+      <button class='botones'>-</button>
+      <button class='botones'>+/-</button>
+      <button class='botones'>0</button>
+      <button class='botones'>.</button>
+      <button class='igual'>=</button>
+		</div>
   </body>
 </html>
